Fixing files following FindBugs messages.